// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Autocomplete Airport 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    style={
      Object {
        "width": 244,
      }
    }
  >
    <div
      className="styled-i666my-0 cvenQH"
    >
      <div
        className="react-autosuggest__container"
      >
        <div
          className="styled__Container-s1arjk6w-0 EWHGI"
        >
          <textarea
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={false}
            aria-owns="react-autowhatever-1"
            autoCapitalize="sentences"
            autoComplete="off"
            autoFocus={true}
            className="react-autosuggest__input styled__Input-s1arjk6w-1 iXGZpy"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Туда"
            role="combobox"
            rows="1"
            type="text"
            value=""
            wrap="off"
          />
          <div
            className="AirportInput__geo styled__Geo-s1arjk6w-2 hFtWvM"
          >
            <div
              className="styled__ValuePlaceholder-s1arjk6w-4 fSrgbd"
            >
              
            </div>
            
            
          </div>
          <div
            className="styled__Code-s1arjk6w-6 jDetvU"
          >
            
          </div>
        </div>
        <div
          className="react-autosuggest__suggestions-container"
          id="react-autowhatever-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks FilterSection 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    style={
      Object {
        "width": 252,
      }
    }
  >
    <section
      className="FilterSection__Section-s16nzsqs-0 klOthM"
    >
      <header
        className="FilterSection__Header-s16nzsqs-1 iKfreE"
      >
        <div>
          Пересадки
        </div>
        <div>
          Сбросить
        </div>
      </header>
      <div
        className="FilterSection__Content-s16nzsqs-2 iZcqtN"
      >
        <div>
          <div>
            <label
              className="styled__CheckboxLabel-s1y74xp1-4 gZGdQt"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox styled__StyledCheckbox-s1y74xp1-2 fcnMoU"
                disabled={false}
              >
                <input
                  checked={false}
                  className="styled__CheckboxInput-s1y74xp1-0 gaHuHQ"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text styled__LabelText-s1y74xp1-3 gWXOZV"
                disabled={false}
              >
                Без пересадок
              </span>
            </label>
          </div>
          <div>
            <label
              className="styled__CheckboxLabel-s1y74xp1-4 gZGdQt"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox styled__StyledCheckbox-s1y74xp1-2 fcnMoU"
                disabled={false}
              >
                <input
                  checked={false}
                  className="styled__CheckboxInput-s1y74xp1-0 gaHuHQ"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text styled__LabelText-s1y74xp1-3 gWXOZV"
                disabled={false}
              >
                1 пересадка
              </span>
            </label>
          </div>
          <div>
            <label
              className="styled__CheckboxLabel-s1y74xp1-4 gZGdQt"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox styled__StyledCheckbox-s1y74xp1-2 fcnMoU"
                disabled={false}
              >
                <input
                  checked={false}
                  className="styled__CheckboxInput-s1y74xp1-0 gaHuHQ"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text styled__LabelText-s1y74xp1-3 gWXOZV"
                disabled={false}
              >
                2 и более
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        className="rc-collapse"
        style={undefined}
      >
        <div
          className="rc-collapse-item FilterSection__PanelWrapper-s16nzsqs-6 kIMGON Panel__PanelStyled-s1crj4p2-0 iyxqus"
          style={undefined}
        >
          <div
            aria-expanded={false}
            className="rc-collapse-header"
            onClick={[Function]}
            role="tab"
          >
            <div
              className="FilterSection__PanelHeader-s16nzsqs-4 fuOTcr"
            >
              <div
                className="stories__WithBorder-s4gvvd-1 pmWwC"
              >
                Пересадки
              </div>
              <svg
                className="FilterSection__IconWrapper-s16nzsqs-5 fTJRDi icon-inherit-color Icon__IconSvg-s1wghk0w-0 emFkOi"
                size="xxsmall"
                style={undefined}
              >
                <use
                  xlinkHref="#kb_arrow-down"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Blocks Styled Tabs 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="rc-tabs rc-tabs-top"
    style={Object {}}
  >
    <div
      className={undefined}
    >
      <span
        aria-disabled={undefined}
        className="Tab-kjfl2q-0 cahOUV"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        1. Бронирование
      </span>
      <span
        aria-disabled={undefined}
        className="Tab-kjfl2q-0 gOHtcC"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        2. Оплата
      </span>
      <span
        aria-disabled={undefined}
        className="Tab-kjfl2q-0 cahOUV"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        3. Получение билета
      </span>
    </div>
    <div
      className="rc-tabs-content rc-tabs-content-no-animated"
      style={undefined}
    >
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
      <div
        aria-hidden="false"
        className="rc-tabs-tabpane rc-tabs-tabpane-active"
        role="tabpanel"
        style={undefined}
      >
        Second tab
      </div>
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Defalut 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="Box__Box-s1fwuq9i-0 bzpUKt"
  >
    <p>
      box content
    </p>
  </div>
</div>
`;

exports[`Storyshots Buttons Default 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <button
    className="no-global styled__StyledButton-s1klwimn-0 hmCLbi"
    disabled={undefined}
    size="normal"
  >
    <span
      className="styled__StyledButtonText-s1klwimn-1 joweYD"
      size="normal"
    >
      Авиабилеты
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Disabled 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <button
    className="no-global styled__StyledButton-s1klwimn-0 brRslT"
    disabled={true}
    size="normal"
  >
    <span
      className="styled__StyledButtonText-s1klwimn-1 joweYD"
      size="normal"
    >
      Cake is a lie
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Icon-only button 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <button
    className="no-global styled__StyledButton-s1klwimn-0 eAouqC"
    disabled={undefined}
    size="large"
  >
    <span
      className="styled__IconWrap-s1klwimn-2 epBAJu"
      size="large"
    >
      <svg
        className="Icon__IconSvg-s1wghk0w-0 gMBYph"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_carrot_monochrome"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Sizes 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <button
    className="no-global styled__StyledButton-s1klwimn-0 eZCijc"
    disabled={undefined}
    size="large"
  >
    <span
      className="styled__StyledButtonText-s1klwimn-1 joweYD"
      size="large"
    >
      Бальшой
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons With icons 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <button
    className="no-global styled__StyledButton-s1klwimn-0 xEJLc"
    disabled={undefined}
    size="normal"
  >
    <span
      className="styled__IconWrap-s1klwimn-2 cFGLW"
      size="normal"
    >
      <svg
        className="Icon__IconSvg-s1wghk0w-0 gMBYph"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_plane"
        />
      </svg>
    </span>
    <span
      className="styled__StyledButtonText-s1klwimn-1 hohiWG"
      size="normal"
    >
      Авиабилеты
    </span>
    <span
      className="styled__IconWrap-s1klwimn-2 cFGLW"
      size="normal"
    >
      <svg
        className="Icon__IconSvg-s1wghk0w-0 gMBYph"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_hand-baggage"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div>
    <label
      className="styled__CheckboxLabel-s1y74xp1-4 gZGdQt"
      disabled={false}
    >
      <span
        checked={false}
        className="checkbox styled__StyledCheckbox-s1y74xp1-2 fcnMoU"
        disabled={false}
      >
        <input
          checked={false}
          className="styled__CheckboxInput-s1y74xp1-0 gaHuHQ"
          disabled={false}
          name=""
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="label-text styled__LabelText-s1y74xp1-3 gWXOZV"
        disabled={false}
      >
        Авиабилеты
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox disabled 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <label
    className="styled__CheckboxLabel-s1y74xp1-4 gAAlDA"
    disabled={true}
  >
    <span
      checked={false}
      className="checkbox styled__StyledCheckbox-s1y74xp1-2 jEpWYk"
      disabled={true}
    >
      <input
        checked={false}
        className="styled__CheckboxInput-s1y74xp1-0 gaHuHQ"
        disabled={true}
        name=""
        onChange={[Function]}
        type="checkbox"
      />
    </span>
    <span
      className="label-text styled__LabelText-s1y74xp1-3 fDBsBR"
      disabled={true}
    >
      Авиабилеты
    </span>
  </label>
</div>
`;

exports[`Storyshots Collapse Accordion 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item Panel__PanelStyled-s1crj4p2-0 iyxqus"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1crj4p2-0 iyxqus"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1crj4p2-0 iyxqus"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item Panel__PanelStyled-s1crj4p2-0 iyxqus"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1crj4p2-0 iyxqus"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1crj4p2-0 iyxqus"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default active panel 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item rc-collapse-item-active Panel__PanelStyled-s1crj4p2-0 iyxqus"
        style={undefined}
      >
        <div
          aria-expanded={true}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
        <div
          className="rc-collapse-content rc-collapse-content-active"
          role="tabpanel"
        >
          <div
            className="rc-collapse-content-box"
          >
            
              A dog is a type of domesticated animal.
              Known for its loyalty and faithfulness,
              it can be found as a welcome guest in many households across the world.
            
          </div>
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1crj4p2-0 iyxqus"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1crj4p2-0 iyxqus"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Different controls group 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="styled__FlexContainer-s1w6soj8-0 eWFDRR"
  >
    <button
      className="no-global styled__StyledButton-s1klwimn-0 ePkboH"
      disabled={undefined}
      size="large"
    >
      <span
        className="styled__StyledButtonText-s1klwimn-1 joweYD"
        size="large"
      >
        Пойти
      </span>
    </button>
    <div
      className="styled__Container-s1arjk6w-0 jcYxml"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="styled__Input-s1arjk6w-1 kCaQzi"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="AirportInput__geo styled__Geo-s1arjk6w-2 jSjkUh"
      >
        <div
          className="styled__ValuePlaceholder-s1arjk6w-4 fSrgbd"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="styled__Code-s1arjk6w-6 RIFXO"
      >
        SVO
      </div>
    </div>
    <button
      className="no-global styled__StyledButton-s1klwimn-0 chfJyt"
      disabled={undefined}
      size="large"
    >
      <span
        className="styled__StyledButtonText-s1klwimn-1 joweYD"
        size="large"
      >
        Найти
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Inputs group 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="styled__FlexContainer-s1w6soj8-0 eWFDRR"
  >
    <div
      className="styled__Container-s1arjk6w-0 dcHuZm"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="styled__Input-s1arjk6w-1 dDmkAF"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="AirportInput__geo styled__Geo-s1arjk6w-2 hFtWvM"
      >
        <div
          className="styled__ValuePlaceholder-s1arjk6w-4 fSrgbd"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="styled__Code-s1arjk6w-6 RIFXO"
      >
        SVO
      </div>
    </div>
    <div
      className="styled__SwapContainer-s1w6soj8-1 jFpYTr"
      onClick={[Function]}
    >
      <svg
        className="controls-group__swap styled__SwapIcon-s1w6soj8-2 dFBJUZ icon-inherit-color Icon__IconSvg-s1wghk0w-0 emFkOi"
        size="xxsmall"
        style={undefined}
      >
        <use
          xlinkHref="#kb_left-right"
        />
      </svg>
    </div>
    <div
      className="styled__Container-s1arjk6w-0 cwqeYE"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="styled__Input-s1arjk6w-1 gyNfwg"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        rows="1"
        value="Несуществующий город"
        wrap="off"
      />
      <div
        className="AirportInput__geo styled__Geo-s1arjk6w-2 jSjkUh"
      >
        <div
          className="styled__ValuePlaceholder-s1arjk6w-4 fSrgbd"
        >
          Несуществующий город
        </div>
        
        
      </div>
      <div
        className="styled__Code-s1arjk6w-6 jDetvU"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange DateRange 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="styled-s17enesa-0 faPtgw"
  >
    <div
      className="DateInput--startDate--placeholder DateInput--endDate--placeholder"
    >
      <div
        className="DateRangePicker"
      >
        <div>
          <div
            className="DateRangePickerInput"
          >
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Туда"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="startDate"
                name="startDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Туда"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Туда
              </div>
            </div>
            <div
              className="DateRangePickerInput__arrow"
            >
              <span />
            </div>
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Обратно"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="endDate"
                name="endDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Обратно"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Обратно
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown Defalut 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <onClickOutside-Mock-Decorator>
    <div
      className="stories__StyledDropdown-mfi2l8-0 gUnDHw Dropdown__DropdownWrapper-s5q41kj-0 iTrOCm"
    >
      <div
        onClick={[Function]}
      >
        click to open  
        <button
          className="no-global styled__StyledButton-s1klwimn-0 hmCLbi"
          disabled={undefined}
          size="normal"
        >
          <span
            className="styled__StyledButtonText-s1klwimn-1 joweYD"
            size="normal"
          >
            click
          </span>
        </button>
      </div>
    </div>
  </onClickOutside-Mock-Decorator>
</div>
`;

exports[`Storyshots Fluid layout Aside on top with beforeSection prop 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="FluidLayout__FluidContainer-s1bio7j4-0 cAWhwm"
    >
      <div
        className="FluidLayout__FluidSection-s1bio7j4-1 iZyzzT"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="FluidLayout__Aside-s1bio7j4-2 cBsxxk"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Single column 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="FluidLayout__SingleFluidSection-s1bio7j4-3 jmHKUk"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "background": "rgba(35, 194, 86, .4)",
            "display": "flex",
            "height": 140,
            "justifyContent": "center",
          }
        }
      >
        Main content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Two columns 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="FluidLayout__FluidContainer-s1bio7j4-0 cAWhwm"
    >
      <div
        className="FluidLayout__FluidSection-s1bio7j4-1 iZyzzT"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="FluidLayout__Aside-s1bio7j4-2 hsdwEa"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FormItem default 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="FormItem__LabelWrapper-ghee0o-0 xpASH"
  >
    <label
      className="FormItem__Label-ghee0o-1 hkGZQO"
      htmlFor="input"
    >
      Cake is a lie
    </label>
    <input
      id="input"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Icon Icon with fill 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <svg
    className="Icon__IconSvg-s1wghk0w-0 eVvSLx"
    size="large"
    style={undefined}
  >
    <use
      xlinkHref="#kb_checkbox"
    />
  </svg>
</div>
`;

exports[`Storyshots Input default 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="Input__InputWrapper-s11ll9o9-2 kPlVaV"
    disabled={undefined}
    size="large"
  >
    <input
      className="Input__StyledInput-s11ll9o9-1 gBdQLx"
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
    />
  </div>
</div>
`;

exports[`Storyshots Input disabled 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="Input__InputWrapper-s11ll9o9-2 WQnrM"
    disabled={true}
    size="large"
  >
    <input
      className="Input__StyledInput-s11ll9o9-1 cjlgaa"
      disabled={true}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Input error 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="Input__InputWrapper-s11ll9o9-2 jnHMGw"
    disabled={undefined}
    size="large"
  >
    <input
      className="Input__StyledInput-s11ll9o9-1 gBdQLx"
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
    />
    <span
      className="Input__Error-s11ll9o9-0 bmAIZy"
    >
      Только латинские буквы
    </span>
  </div>
</div>
`;

exports[`Storyshots Input success 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="Input__InputWrapper-s11ll9o9-2 jOEMEH"
    disabled={undefined}
    size="large"
  >
    <input
      className="Input__StyledInput-s11ll9o9-1 gBdQLx"
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots PassengerPicker Defalut 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div
    className="PassengerPicker__Passenger-pe8v30-0 ejlAdo"
  >
    <div>
      <div
        className="PassengerPicker__Title-pe8v30-1 hhPBMP"
      >
        Взрослые
      </div>
      <div
        className="PassengerPicker__Description-pe8v30-2 evkhX"
      >
        До 2 лет, без места
      </div>
    </div>
    <div
      className="PassengerPicker__PassangerCount-pe8v30-5 eFBqxM"
    >
      <span
        className="PassengerPicker__Current-pe8v30-3 cIGvHW"
      >
        1
      </span>
      <div
        className="PassengerPicker__CountControls-pe8v30-6 Rzbjz"
      >
        <button
          className="no-global PassengerPicker__ButtonControl-pe8v30-4 gtaeZj styled__StyledButton-s1klwimn-0 kWpLNH"
          disabled={true}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="styled__IconWrap-s1klwimn-2 cFGLW"
            size="normal"
          >
            <svg
              className="Icon__IconSvg-s1wghk0w-0 gMBYph"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_minus"
              />
            </svg>
          </span>
        </button>
        <button
          className="no-global PassengerPicker__ButtonControl-pe8v30-4 gtaeZj styled__StyledButton-s1klwimn-0 bPUhrU"
          disabled={false}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="styled__IconWrap-s1klwimn-2 cFGLW"
            size="normal"
          >
            <svg
              className="Icon__IconSvg-s1wghk0w-0 gMBYph"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_plus"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PriceVariantsButton default 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div>
    <div
      className="PriceVariantsButton__Root-s1h37y8o-0 buQEqI"
    >
      <div
        className="PriceVariantsButton__Button-s1h37y8o-1 imfHVt"
        onChange={null}
        onClick={[Function]}
        title="Банковской картой он-лайн"
      >
        <div
          className="PriceVariantsButton__Content-s1h37y8o-4 jSzIx"
        >
          <span
            className="PriceVariantsButton__Title-s1h37y8o-5 koQyzq"
          >
            Банковской картой он-лайн
          </span>
          <div>
            <svg
              className="block-icon PriceVariantsButton__StyledIcon-s1h37y8o-3 kAaKgs Icon__IconSvg-s1wghk0w-0 kczfhc"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_plane"
              />
            </svg>
          </div>
        </div>
        <div
          className="PriceVariantsButton__Content-s1h37y8o-4 jSzIx"
        >
          <span
            className="PriceVariantsButton__Price-s1h37y8o-6 gXHqCK"
          >
            12 234 ₽
             ₽
          </span>
        </div>
      </div>
      <span
        className="PriceVariantsButton__Description-s1h37y8o-2 hsAgxm"
      >
        Описание
      </span>
    </div>
    <div
      className="PriceVariantsButton__Root-s1h37y8o-0 buQEqI"
    >
      <div
        className="PriceVariantsButton__Button-s1h37y8o-1 hFxLgj"
        onChange={null}
        onClick={[Function]}
        title="Эконом Базовый"
      >
        <div
          className="PriceVariantsButton__Content-s1h37y8o-4 jSzIx"
        >
          <span
            className="PriceVariantsButton__Title-s1h37y8o-5 fwilBL"
          >
            Эконом Базовый
          </span>
        </div>
        <div
          className="PriceVariantsButton__Content-s1h37y8o-4 jSzIx"
        >
          <span
            className="PriceVariantsButton__Price-s1h37y8o-6 gXHqCK"
          >
            12 234 ₽
             ₽
          </span>
          <div>
            <svg
              className="block-icon PriceVariantsButton__StyledIcon-s1h37y8o-3 kAaKgs Icon__IconSvg-s1wghk0w-0 kczfhc"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_hand-baggage"
              />
            </svg>
            <svg
              className="block-icon PriceVariantsButton__StyledIcon-s1h37y8o-3 kAaKgs Icon__IconSvg-s1wghk0w-0 kczfhc"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_exchange"
              />
            </svg>
            <svg
              className="block-icon PriceVariantsButton__StyledIcon-s1h37y8o-3 kAaKgs Icon__IconSvg-s1wghk0w-0 kczfhc"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_return"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        className="PriceVariantsButton__Description-s1h37y8o-2 hsAgxm"
      >
        Описание
      </span>
    </div>
    <div
      className="PriceVariantsButton__Root-s1h37y8o-0 buQEqI"
    >
      <div
        className="PriceVariantsButton__Button-s1h37y8o-1 hFxLgj"
        onChange={null}
        onClick={[Function]}
        title="Эконом"
      >
        <div
          className="PriceVariantsButton__Content-s1h37y8o-4 jSzIx"
        >
          <span
            className="PriceVariantsButton__Title-s1h37y8o-5 fwilBL"
          >
            Эконом
          </span>
        </div>
        <div
          className="PriceVariantsButton__Content-s1h37y8o-4 jSzIx"
        >
          <span
            className="PriceVariantsButton__Price-s1h37y8o-6 gXHqCK"
          >
            12 234 ₽
             ₽
          </span>
          <div>
            <svg
              className="block-icon PriceVariantsButton__StyledIcon-s1h37y8o-3 kAaKgs Icon__IconSvg-s1wghk0w-0 kczfhc"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_hand-baggage"
              />
            </svg>
            <svg
              className="block-icon PriceVariantsButton__StyledIcon-s1h37y8o-3 kAaKgs Icon__IconSvg-s1wghk0w-0 kczfhc"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_exchange"
              />
            </svg>
            <svg
              className="block-icon PriceVariantsButton__StyledIcon-s1h37y8o-3 kAaKgs Icon__IconSvg-s1wghk0w-0 kczfhc"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_return"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        className="PriceVariantsButton__Description-s1h37y8o-2 hsAgxm"
      >
        Описание
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Utils Responsive only 1`] = `
<div
  className="ThemeProvider__GlobalStylesScope-s1b41ppc-0 hDwhki"
>
  <div>
    <div
      className="ResponsiveOnly__DesktopOnly-s1ypn7k5-0 bKOEnQ"
    >
      <div
        className="stories__StoryTip-s1j89sg0-0 gCdlox"
      >
        Desktop
      </div>
    </div>
    <div
      className="ResponsiveOnly__HandheldOnly-s1ypn7k5-3 eNRBuP"
    >
      <div
        className="sc-bdVaJa DRdhs"
      >
        Handheld
      </div>
    </div>
    <div
      className="ResponsiveOnly__TabletOnly-s1ypn7k5-2 fMvcuW"
    >
      <div
        className="sc-bwzfXH bCScSi"
      >
        Tablet
      </div>
    </div>
    <div
      className="ResponsiveOnly__MobileOnly-s1ypn7k5-1 htdJYv"
    >
      <div
        className="sc-htpNat iwGFdx"
      >
        Mobile
      </div>
    </div>
    <div
      className="ResponsiveOnly__NotMobileOnly-s1ypn7k5-4 dxsLbd"
    >
      <div
        className="sc-bxivhb htfAcQ"
      >
        Not mobile
      </div>
    </div>
  </div>
</div>
`;
